# CRUD_demo_project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Readme.md  docker-compose.yaml  dockerfile  makefile  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  test.db
.github/workflows/: ci.yaml  commitlint.yaml  secret-scan.yaml
app/: main.py
app/api/: deps.py  items.py
app/core/: config.py
app/data/: seeds.json
app/db/: connection.py
app/domain/: models.py
app/persistence/: repositories.py
app/schemas/: item.py
app/scripts/: seed.py
app/services/: items.py
app/templates/: index.html
app/tests/: conf_test.py  test_items.py
migrations/: env.py
migrations/versions/: 682328e1d7e7_init_schema.py
